# TextBlob

./: .coveragerc  .gitignore  .konchrc  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  RELEASING.md  SECURITY.md  SuprnovaGUI.git  dev-requirements.txt  download_corpora.py  download_corpora_lite.py  pyproject.toml  run_tests.py  setup.cfg  setup.py  tasks.py  test.py  test_complexity_output.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build-release.yml
docs/: Makefile  advanced_usage.rst  api_reference.rst  changelog.rst  classifiers.rst  conf.py  extensions.rst  index.rst  install.rst  license.rst  make.bat  quickstart.rst  requirements.txt
docs/_templates/: side-primary.html  side-secondary.html
docs/_themes/: flask_theme_support.py
examples/: blobber_factory.ipynb  custom_spell_correction.ipynb  generate_summary.ipynb  text_classification.ipynb  text_processing.ipynb
nltk/: PKG-INFO  internals.py
src/textblob/: __init__.py  _text.py  base.py  blob.py  classifiers.py  compat.py  decorators.py  download_corpora.py  exceptions.py  formats.py  inflect.py  mixins.py  np_extractors.py  parsers.py  sentiments.py  taggers.py  tokenizers.py  translate.py  utils.py  wordnet.py
test/: test_blob.py  test_np_extractor.py
tests/: blob_tests.py  data.csv  data.json  data.tsv  test_blob.py  test_classifiers.py  test_compatiblity.py  test_decorators.py  test_formats.py  test_inflect.py  test_np_extractor.py  test_parsers.py  test_perceptron_tagger.py  test_pluralization.py  test_proxy.py  test_sentiments.py  test_taggers.py  test_tokenizers.py  test_translate.py  test_utils.py  utils_tests.py
text/: __init__.py  _perceptron.py  _text.py  base.py  blob.py  classifiers.py  compat.py  decorators.py  en-context.txt  en-lexicon.txt  en-sentiment.xml  en.py  exceptions.py  formats.py  inflect.py  mixins.py  np_extractor.py  np_extractors.py  packages.py  parsers.py  sentiment.py  sentiments.py  taggers.py  text.py  tokenizers.py  translate.py  utils.py  wordnet.py
text/en/: __init__.py  (+7 more)
textblob/: __init__.py  _text.py  base.py  blob.py  classifiers.py  compat.py  decorators.py  download_corpora.py  exceptions.py  formats.py  inflect.py  np_extractors.py  ordereddict.py  parsers.py  proxy.py  sentiments.py  taggers.py  tokenizers.py  translate.py  wordnet.py
(+71 files in other folders)
